Update documentation for new makefile

--- a/manual.html
+++ b/manual.html
@@ -529,7 +529,7 @@ generator (<em>lex</em> or <em>flex</em>), and a parser generator (<em>yacc</em>
 compile all code, you need a C++ compiler, for example <em>g++</em>. The code uses
 <tt class="docutils literal">libpng</tt> for reading the images, so that library must be available to build
 against as well. The build process for a typical Linux machine is defined in
-the <tt class="docutils literal">mk</tt> file.</p>
+the <tt class="docutils literal">Makefile</tt> file, run by <em>make</em>.</p>
 <p>If you don't have a scanner generator or a parser generator, the source code
 that they generate is also included in the directory, allowing you to skip
 those generation steps.</p>
